# TemplateRays

./: .gitignore  CMakeLists.txt  README.md
scripts/: precompile-header.sh
src/: BaseImageConverter.cpp  BaseImageConverter.hpp  Camera.cpp  Camera.hpp  CameraSample.cpp  CameraSample.hpp  Color.cpp  Color.hpp  ColorHSV.hpp  ColorRGB.cpp  ColorRGB.hpp  Image.cpp  Image.hpp  ImageConverterPPM.cpp  ImageConverterPPM.hpp  OrthographicCamera.hpp  ProjectiveCamera.hpp  Ray.cpp  Ray.hpp  Shape.cpp  Shape.hpp  ShapeSphere.cpp  ShapeSphere.hpp  Transform.cpp  Transform.hpp  default.hpp  main.cpp  precompiled.hpp  utilities.cpp  utilities.hpp
